--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,19 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/server.js"
+        "dest": "/server.js",
+        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+        "headers": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
+          "Access-Control-Allow-Credentials": "true",
+          "Cache-Control": "public, max-age=0, must-revalidate",
+          "X-Frame-Options": "DENY",
+          "X-Content-Type-Options": "nosniff",
+          "X-XSS-Protection": "1; mode=block",
+          "Referrer-Policy": "strict-origin-when-cross-origin",
+          "Strict-Transport-Security": "max-age=31536000; includeSubDomains"
+        }
       }
     ]
   }  
